# ARNA-SUMMER-2024

./: .bashrc  .gitconfig  README.md  frames.gv
.rviz/: arna1.rviz  default.rviz  deneme_map.rviz  persistent_settings
actor_ws/devel/: .catkin  .rosinstall  setup.sh
arna_base/: setup.sh
arna_base/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
arna_base/src/gazebo_ros_demos/arna_base_control/: CMakeLists.txt  mecanum_drive_controller_plugins.xml  package.xml
arna_base/src/gazebo_ros_demos/arna_base_control/config/: arna_base_control.yaml
arna_base/src/gazebo_ros_demos/arna_base_control/include/mecanum_drive_controller/: mecanum_drive_controller.h  odometry.h  speed_limiter.h
arna_base/src/gazebo_ros_demos/arna_base_control/launch/: arm.launch  arna_base_control.launch  arna_base_teleop_tablet.launch
arna_base/src/gazebo_ros_demos/arna_base_control/src/arna_base_teleop_tablet/: arna_base_teleop_tablet.cpp
arna_base/src/gazebo_ros_demos/arna_base_control/src/mecanum_drive_controller/: mecanum_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
catkin_workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_workspace/logs/gazebo_grasp_plugin/: build.cmake.000.log.stderr  build.symlink.000.log.stderr
catkin_workspace/logs/gazebo_version_helpers/: build.cmake.000.log.stderr  build.symlink.000.log.stderr
catkin_workspace/logs/gen3_lite_gen3_lite_2f_move_it_config/: build.symlink.000.log.stderr
catkin_workspace/logs/gen3_move_it_config/: build.symlink.000.log.stderr
catkin_workspace/logs/gen3_robotiq_2f_140_move_it_config/: build.symlink.000.log.stderr
kortex_ws/devel/: .catkin
notebook_ws/: default.ipynb
simulation_ws/devel/: _setup_util.py
(+131 files in other folders)
